# custom-configs

./: pyproject.toml
tests/: config.py  conftest.py  test_enviroment.py
