[tool.poetry]
name = "custom-configs"
version = "0.1.0"
description = ""
authors = ["bruno.rodrigo <bruno.rodrigo@farfetch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
